Clone from original element, Embed Ace editor, and Alertify Modal.

--- a/src/drawflow.css
+++ b/src/drawflow.css
@@ -138,3 +138,13 @@
   right: -15px;
   top: -15px;
 }
+
+/* Ace Editor <pre>
+#codeEditor {
+  margin: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
