--- a/src/drawflow.css
+++ b/src/drawflow.css
@@ -140,11 +140,13 @@
 }
 
 /* Ace Editor <pre> */
-#codeEditor {
-  margin: 0;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.codeEditor pre{
+ width: 100%;
+ height: 100%;
+ position: absolute;
+ display: block;
+}
+
+.codeEditor pre .ace_editor{
+  position: relative;
 }
